第三周课件及示例工程

--- a/PPT/每周要求和自查.md
+++ b/PPT/每周要求和自查.md
@@ -33,3 +33,22 @@
 - 实验一点评讲解      
 - 用Servlet实现一个用户注册及登录的应用（无需数据库，数据保存内存里即可）  
 - 完成实验二要求
+
+### 第三周内容及主要达成目标
+
+##### 主要内容
+1. Servlet及JSP工作过程     
+1. RESTful理念     
+1. 使用SpringMVC实现基本的RESTful设计  
+1. Tomcat服务器中运行SpringMVC程序 
+1. （Advanced)五种软件架构 
+
+
+课件：P05-基于Servlet的Restful设计、P06-软件架构介绍    
+
+##### 实验
+- 完成实验三           
+- 使用SpringMVC初步  
+- 绘制实验中程序类的UML类图 
+
+
