第四周课程内容

--- a/PPT/每周要求和自查.md
+++ b/PPT/每周要求和自查.md
@@ -51,4 +51,19 @@
 - 使用SpringMVC初步  
 - 绘制实验中程序类的UML类图 
 
+### 第四周内容及主要达成目标
 
+##### 主要内容
+
+1. jdbc基本复习
+1. ORMapping设计：Dao对象封装，分离SQL语句     
+1. ORMapping设计：使用接口和工厂方法，提供设计和实现分离
+1. ORMapping设计：提供动态性，减轻数据库访问开发的负担，提高开发效率和质量 
+
+
+课件：P07-ORMapping原理及设计理解   
+
+##### 实验
+
+- 完成实验四（计分实验）           
+- 理解并能动手编写ORMapping设计框架代码  
