第五周课程内容

--- a/PPT/每周要求和自查.md
+++ b/PPT/每周要求和自查.md
@@ -67,3 +67,18 @@
 
 - 完成实验四（计分实验）           
 - 理解并能动手编写ORMapping设计框架代码  
+
+### 第五周内容及主要达成目标
+
+##### 主要内容
+
+1. IoC思想和设计模式
+1. IoC示例理解
+
+
+课件：P08-IoC
+
+##### 实验
+
+- 完成实验五
+- 理解并能动手编写Mini-Spring
