第六周课件及示例代码

--- a/PPT/每周要求和自查.md
+++ b/PPT/每周要求和自查.md
@@ -82,3 +82,19 @@
 
 - 完成实验五
 - 理解并能动手编写Mini-Spring
+
+### 第六周内容及主要达成目标
+
+##### 主要内容
+
+1. AOP思想
+1. 实现AOP的主要途径：静态代理、Java动态代理机制、CGLib库
+1. 补充：基于课堂反馈补充Java反射机制、类加载机制的讲解
+
+
+课件：P09-Java反射、P10-AOP
+
+##### 实验
+
+- 完成实验六
+- 理解并能动手为上个实验编写的Mini-Spring添加AOP能力
