第七周课件及示例代码

--- a/PPT/每周要求和自查.md
+++ b/PPT/每周要求和自查.md
@@ -98,3 +98,23 @@
 
 - 完成实验六
 - 理解并能动手为上个实验编写的Mini-Spring添加AOP能力
+
+
+
+### 第七周内容及主要达成目标
+
+##### 主要内容
+
+1. 理解Spring框架生态
+1. 能够通过向导构建一个基于Spring Boot 、 Spring MVC和Spring Data框架的项目
+1. 能够完成RESTful接口的开发
+1. 能够使用Spring Data框架完成数据库基本增删改操作
+
+
+课件：P11-Spring、X-后半学期的课程作业需求
+
+##### 实验
+
+- 完成实验七（计分实验）
+- 完成时间2周
+- 理解并能动手基于Spring开发基础项目
