第八周课件及示例代码

--- a/PPT/每周要求和自查.md
+++ b/PPT/每周要求和自查.md
@@ -118,3 +118,21 @@
 - 完成实验七（计分实验）
 - 完成时间2周
 - 理解并能动手基于Spring开发基础项目
+
+
+
+### 第八周内容及主要达成目标
+
+##### 主要内容
+
+1. 学习Spring Data JPA
+1. 可以使用Spring Data JPA完成常见的数据库操作（单表CRUD操作，多表查询，查询统计）
+
+
+课件：P12-SpringDataJPA
+
+##### 实验
+
+- 继续完成实验七（计分实验）
+
+  
