第九周课件及示例代码

--- a/PPT/每周要求和自查.md
+++ b/PPT/每周要求和自查.md
@@ -135,4 +135,21 @@
 
 - 继续完成实验七（计分实验）
 
-  
+
+
+
+### 第九周内容及主要达成目标
+
+##### 主要内容
+
+1. 学习Spring MVC中的View
+1. 理解Spring MVC工作流程，以及返回JSON数据的过程
+1. 理解Spring Boot的自动化配置后面掩盖的Spring MVC的默认配置
+1. 掌握通过Spring MVC构造基于模板（Thymeleaf为例），JSON和PDF的不同view体系
+
+
+课件：P13-View
+
+##### 实验
+
+- 实验八（计分实验）
