第十周课件及示例代码

--- a/PPT/每周要求和自查.md
+++ b/PPT/每周要求和自查.md
@@ -153,3 +153,21 @@
 ##### 实验
 
 - 实验八（计分实验）
+
+
+
+### 第十周内容及主要达成目标
+
+##### 主要内容
+
+1. 补充介绍Java语言的一些常用特性
+1. 理解Annotation
+1. 理解Stream
+1. 理解Lambda
+
+
+课件：P14-Java语言补充
+
+##### 实验
+
+- 继续完成实验八
